# parish-census

backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_drop_master_data.py  0003_drop_house_number.py  0004_church_group_array.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/models/: __init__.py  census.py
backend/app/routers/: dashboard.py  families.py  intake.py  master_data.py  members.py  reports.py  search.py  villages.py
backend/app/schemas/: census.py
backend/app/services/: chart_images.py  mobile_uniqueness.py  queries.py  report_data.py  report_render.py  village_lookup.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/constants/: census-form-options.ts
frontend/src/context/: auth-context.tsx  theme-context.tsx
frontend/src/hooks/: use-autosave-draft.ts  use-pagination.ts  use-unsaved-changes-warning.ts  use-unsaved-changes-warning.tsx
frontend/src/layouts/: app-shell.tsx
frontend/src/lib/: api-error.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx  population.families.$familyId.tsx  population.families.add.tsx  population.families.tsx  population.families_.$familyId.tsx  population.families_.add.tsx  population.members.add.tsx  population.members.tsx  population.members_.$memberId.edit.tsx  population.members_.add.tsx  population.villages.$villageId.tsx  population.villages.tsx  population.villages_.$villageId.tsx  reports.tsx  reports_.$reportType.tsx
(+27 files in other folders)
